tests/analyzer/errors/extern.ray
extern fn foo()

fn main() {}
